# dplayer-ui

./: Cargo.toml  Makefile  Makefile.toml
public/: index.html  index.js  style.css
src/: lib.rs  page.rs
src/page/: home.rs  player.rs  playlist.rs  queue.rs  settings.rs
